--- a/src/styles/drive.css
+++ b/src/styles/drive.css
@@ -45,6 +45,11 @@ header {
   }
 }
 
+#exam-filelist {
+  width: 100%;
+  height: 100%;
+}
+
 /* End of booklist */
 #end-of-booklist {
   margin: 50px 0px;
