--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -20,6 +20,7 @@
 
 .content-container-vert {
   width: 100vw;
+  height: calc(100vh - 66px);
   flex-grow: 1;
   height: auto;
   position: relative;
