--- a/src/styles/components/console/searchconsole.css
+++ b/src/styles/components/console/searchconsole.css
@@ -8,6 +8,7 @@
   align-items: flex-start;
   padding: 20px;
   background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   
   user-select: none;
   -webkit-user-select: none;
