--- a/src/styles/drive.css
+++ b/src/styles/drive.css
@@ -1,12 +1,12 @@
 /* @/styles/drive.css */
 
-header {
+.filelist-content-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
   h1 {
     font-size: 24px;
-    font-weight: bold;
+    font-weight: normal;
   }
 }
 
