--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
 /* Global Font Styles*/
 @font-face {
   font-family: 'D2Coding';
-  src: url('/font/D2coding-1.3.woff2') format('woff2');
+  src: url('/font/d2coding.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
